# aeson-codec

./: .gitignore  CHANGELOG.md  LICENSE  aeson-codec.cabal  hie.yaml
src/Data/Aeson/: Codec.hs  Compat.hs  Decoder.hs  Encoder.hs
src/Data/Aeson/Codec/: Internal.hs
src/Data/Aeson/Decoder/: Internal.hs
src/Data/Aeson/Encoder/: Internal.hs
test/: Doctests.hs  Test.hs
