cabal-version:      3.0
name:               aeson-codec
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ambros Lins
maintainer:         ambros.lins@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wextra
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

  default-extensions:
    , DeriveFunctor
    , DerivingStrategies
    , DerivingVia
    , ExistentialQuantification
    , FlexibleContexts
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , LambdaCase
    , NamedFieldPuns
    , OverloadedStrings
    , RankNTypes
    , ScopedTypeVariables
    , TypeApplications

  build-depends:
    , base >= 4.14.3.0
    , aeson ^>= 2.0.0.0
    , transformers
    , text
    , bytestring
    , scientific
    , vector
    , profunctors

library
  import:           common
  hs-source-dirs:   src
  exposed-modules:
    , Data.Aeson.Codec.Internal
    , Data.Aeson.Decoder.Internal
    , Data.Aeson.Encoder.Internal

  -- Modules included in this library but not exported.
  -- other-modules:

test-suite aeson-codec-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.14.3.0

test-suite aeson-codec-doctest
  import:           common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Doctests.hs
  build-depends:
    , aeson-codec
    , doctest-parallel ^>= 0.2.2
